# Benchmarking

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
genAI/: __init__.py  cli.py
genAI/benchmarks/: __init__.py  base.py  image_generation.py  llm.py  vlm.py
genAI/data/: instruction_fidelity.json  llm_basic_qa.json  model_manifest.json  token_generation_speed.json  vlm_caption_keywords.json
genAI/data/perf_prompts/: large.txt  medium.txt  small.txt
genAI/perf/: __init__.py  inventory.py  prompt_catalog.py  system_metrics.py
genAI/providers/: __init__.py  base.py  jax.py  llamacpp.py  lmstudio.py  mlx.py  ollama.py  registry.py
genAI/runners/: __init__.py  evaluator.py
genAI/scoring/: __init__.py  models.py  standard.py
genAI/suites/: __init__.py  basic_qa.py  caption_keywords.py  instruction_fidelity.py  registry.py  token_generation_speed.py
scripts/: build_static_perf_prompts.py  download_hf_model.py  download_qwen35_llamacpp.sh  link_all_lmstudio_models.py  link_lmstudio_model.py  perf_benchmark.py  recommended_models.py  run_perf_benchmark.sh
tests/: test_perf_tool.py  test_registry.py  test_scoring.py  test_system_metrics.py
tests/fixtures/: powermetrics_sample.plist
